# ragval

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: hotpotqa-500.jsonl
scripts/: prepare_hotpotqa.py
src/ragval/: __init__.py  cli.py  datasets.py  judges.py  metrics.py  retrieval.py  runner.py  runs.py  smoke_test.py  types.py
tests/: test_judges.py  test_metrics.py  test_retrieval.py  test_runner.py  test_runs_and_correctness.py  test_types.py
