[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragval"
version = "0.0.1"
description = "Rigorous RAG evaluation with confidence intervals, significance testing, and judge calibration."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["rag", "evaluation", "llm", "benchmarking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.5",
    "diskcache>=5.6",
    "google-generativeai>=0.8",
    "groq>=0.11",
    "rank-bm25>=0.2.2",
    "datasets>=3.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "typer>=0.12",
    "rich>=13.7",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.36", "pandas>=2.2", "plotly>=5.22"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
all = ["ragval[dashboard,dev]"]

[project.scripts]
ragval = "ragval.cli:app"

[project.urls]
Homepage = "https://github.com/yourname/ragval"
Repository = "https://github.com/yourname/ragval"
Issues = "https://github.com/yourname/ragval/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ragval"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line too long handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
